test/sema/negative/subtyping2.impala
fn f(r: fn(float)->()) -> () {
   r(4)
}
