test/sema/negative/subtyping2.out
subtyping2.impala:2 col 6: error: mismatched types: expected 'f32' but found 'i32' as argument type
